--- a/templates/admin/new-book.html
+++ b/templates/admin/new-book.html
@@ -63,7 +63,7 @@
                 <div class="form-group">
                     <label for="synopsis" class="col-sm-3 control-label">Sinopse</label>
                     <div class="col-sm-10">
-                        <textarea placeholder="Sinopse"></textarea>
+                        <textarea name="synopsis" id="synopsis" placeholder="Sinopse"></textarea>
                     </div>
                 </div>
 
