--- a/templates/admin/new-book.html
+++ b/templates/admin/new-book.html
@@ -91,7 +91,7 @@
                 <div class="form-group">
                     <label for="date__translate" class="col-sm-3 control-label">Data de tradução</label>
                     <div class="col-sm-10">
-                        <input type="date" name="date__translate" class="form-control" placeholder="Data de tradução" id="date__translate">
+                        <input type="text" name="date__translate" class="form-control" placeholder="Data de tradução" id="date__translate">
                     </div>
                 </div>
 
