--- a/templates/admin/new-book.html
+++ b/templates/admin/new-book.html
@@ -61,9 +61,9 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="synopsis" class="col-sm-3 control-label">Sinopse</label>
+                    <label for="synopsis" class="col-sm-3 control-label">Sinopse *</label>
                     <div class="col-sm-10">
-                        <textarea name="synopsis" id="synopsis" placeholder="Sinopse"></textarea>
+                        <textarea name="synopsis" id="synopsis" placeholder="Sinopse" required></textarea>
                     </div>
                 </div>
 
@@ -110,7 +110,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="genre" class="col-sm-3 control-label">Gênero</label>
+                    <label for="genre" class="col-sm-3 control-label">Gênero *</label>
                     <div class="genre col-sm-10">
                         <select name="genre" required>
                             <option selected disabled value="null"> -- Selecione -- </option>
