--- a/templates/sign/index.html
+++ b/templates/sign/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/235f508f3b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../../style/login-style.css">
-    <link rel="icon" type="imagem/png" href="../images/icon.png" />
+    <link rel="icon" type="imagem/png" href="../../images/icon.png" />
     <title>Login</title>
 </head>
 
