Try insert image

--- a/templates/admin/new-book.html
+++ b/templates/admin/new-book.html
@@ -20,7 +20,7 @@
   </div>
   <!-- título -->
   <!-- formulário -->
-		<form class="form-horizontal" method="post" action="../../script/new-book.php">
+		<form class="form-horizontal" method="post" action="../../script/new-book.php" enctype="multipart/form-data">
 		    <div class="form">
                 <div class="text">
                     <h5 style="font-weight: 600;">Preencha as informações necessárias para o cadastro do livro no sistema</h5>
