--- a/templates/admin/new-book.html
+++ b/templates/admin/new-book.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Solaris</title>
+	<title>Seshat &middot; Cadastro de livros</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/235f508f3b.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" type="text/css" href="../../style/new-book.css">
-  <link rel="icon" type="imagem/png" href="../images/icon.png">
+  <link rel="icon" type="imagem/png" href="../../images/icon.png">
+  <script src="../../script/jquery-3.6.1.js"></script>
 </head>
 <body>
 
@@ -20,7 +21,7 @@
   </div>
   <!-- título -->
   <!-- formulário -->
-		<form class="form-horizontal" method="post" action="../../script/new-book.php" enctype="multipart/form-data">
+		<form class="form-horizontal" method="post" enctype="multipart/form-data">
 		    <div class="form">
                 <div class="text">
                     <h5 style="font-weight: 600;">Preencha as informações necessárias para o cadastro do livro no sistema</h5>
@@ -156,15 +157,54 @@
                 
                 <div class="footer">
                     <button type="reset" value="Reset">Limpar</button>
-                    <button type="submit">Prosseguir</button>
+                    <button type="submit" id="submit">Prosseguir</button>
                 </div>
 
             </div>	
         </form>
 
+        <script>
+                var $button = document.querySelector("#submit");
+
+                var data = {
+                    title: document.querySelector("#title"),
+                    author: document.querySelector("#author"),
+                    publisher: document.querySelector("#publisher"),
+                    collection: document.querySelector("#collection"),
+                    subtitle: document.querySelector("#subtitle"),
+                    synopsis: document.querySelector("#synopsis"),
+                    translator: document.querySelector("#translator"),
+                    launch: document.querySelector("#launch"),
+                    originaltitle: document.querySelector("#original__title"),
+                    datetranslate: document.querySelector("#date__translate"),
+                    reviewer: document.querySelector("#reviewer"),
+                    isbn: document.querySelector("#isbn"),
+                    genre: document.querySelector("#genre"),
+                    image: document.querySelector("#image")
+                }
+
+                var book = JSON.stringify(data);
+
+                $().ready(function() {
+                    $($button).click(function() {
+                        $.ajax({
+                            url: '../../script/new-book.php',
+                            type: 'POST',
+                            data: {data: book},
+                            sucess: function(result) {
+                                console.log('Dados enviados com sucesso!');
+                            },
+                            error: function(jqXHR, textStatus, errorThrown) {
+                                console.log('Os dados não foram enviados.');
+                            }
+                        });
+                    });
+                });
+        </script>
+
 	<!-- JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
-
+  <!-- <script src="../../script/new-book.js"></script> -->
 </body>
 </html>
